--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,26 +62,35 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  fonts:
+    - family: ICELAND
+      fonts:
+        - asset: assets/fonts/Iceland-Regular.ttf
+          weight: 400
+
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/background/
     - assets/images/borders/
     - assets/images/tiles/
+    - assets/images/candle/
     - assets/images/deco/
     - assets/images/bombs/
     - assets/audio/
     - assets/levels.json
+
+  # An image asset can refer to one or more resolution-specific "variants", see
+  # https://flutter.dev/assets-and-images/#resolution-aware
+
+  # For details regarding adding assets from package dependencies, see
+  # https://flutter.dev/assets-and-images/#from-packages
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: ICELAND
-      fonts:
-        - asset: assets/fonts/Iceland-Regular.ttf
-          weight: 400
+  # fonts:
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
