--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   rxdart: ^0.27.7
   get: ^4.6.6
   just_audio: ^0.9.38
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
