--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/images/candle/
     - assets/images/deco/
     - assets/images/bombs/
+    - assets/images/levels/
     - assets/audio/
     - assets/levels.json
 
