--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "candycrush",
-    "short_name": "candycrush",
+    "name": "Emotion Game",
+    "short_name": "EmotionGame",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#FF6B6B",
+    "theme_color": "#FF6B6B",
+    "description": "A fun candy crush style game to express emotions.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
